# indian-budget-speeches

./: .gitignore  README.md  budget_analyzer.ipynb  pyproject.toml
